<resources>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="app_name">飞客茶馆</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="network_no_connection">网络不可用</string>
    <string name="data_error">数据异常</string>
    <string name="islong_remind">请先登录后才能继续浏览</string>
    <string name="click_the_reply">点击进行回复</string>
    <string name="press_one_more_time_exitapp">再按一次退出程序</string>
    <string name="post_details_remind_authority">抱歉，你所在的用户组没有浏览该帖子的权限。</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="download_apk_message">开始下载飞客茶馆啦...</string>
    <string name="person_name">testflyer3</string>
    <string name="membership_level">公司职员</string>
    <string name="sign">签到</string>
    <string name="person_my">我的</string>
    <string name="my_friends">好友</string>
    <string name="private_message">私信</string>
    <string name="zhibo">直播</string>
    <string name="remind">提醒</string>
    <string name="post">帖子</string>
    <string name="collection">收藏</string>
    <string name="prestige">威望:</string>
    <string name="femtometers">飞米:</string>
    <string name="mine_ac_femtometers">飞米 2840</string>
    <string name="mine_ac_integral">积分 1648</string>
    <string name="mine_ac_flowers">鲜花 48</string>
    <string name="hotel_reservation">酒店预订</string>
    <string name="credit_card_integral">信用卡积分</string>
    <string name="entry_points">入门知识</string>
    <string name="for_the_rebate">飞客返利</string>
    <string name="fly_for_raiders">飞客攻略</string>
    <string name="fly_for_steward">飞客管家</string>
    <string name="system_setting">系统设置</string>
    <string name="fly_for_hui">飞客惠</string>
    <string name="flyer_housekeeper">飞客管家</string>
    <string name="flyer_experience">飞客体验师</string>
    <string name="earn_fly_meters">赚取飞米</string>
    <string name="mutual_exchange">互助交易</string>
    <string name="commonly_used_telephone">常用电话</string>
    <string name="mine_ac_xiaobai">小白入门</string>
    <string name="mine_ac_earn_fly_meters">飞米商城</string>
    <string name="mine_ac_for_the_rebate">飞客返利</string>
    <string name="mine_ac_mutual_exchange">互助交易</string>
    <string name="mine_ac_about_us">关于我们</string>
    <string name="mine_ac_feedback">意见反馈</string>
    <string name="mine_ac_comment_set">通用设置</string>
    <string name="mine_ac_account_set">账户设置</string>
    <string name="mine_ac_my_zhibo">我的直播</string>
    <string name="mine_ac_record">最近浏览</string>
    <string name="mine_ac_recommend_friends">推荐好友</string>
    <string name="defaultModul">新帖,热帖,精华帖</string>
    <string name="defaultNewPost">新帖</string>
    <string name="defaultHotPost">热帖</string>
    <string name="defaultCreamPost">精华帖</string>
    <string name="subscription_column_title">订阅栏目</string>
    <string name="subscription_column_click_add">点击添加更多栏目</string>
    <string name="drawer_sign_in">签到</string>
    <string name="drawer_sign_in_ok">已签到</string>
    <string name="drawer_private_letter">私信</string>
    <string name="drawer_remind">提醒</string>
    <string name="drawer_posts">帖子</string>
    <string name="drawer_collect">收藏</string>
    <string name="drawer_home_page">首页</string>
    <string name="drawer_forum">版块</string>
    <string name="drawer_book">预订</string>
    <string name="drawer_preferential">优惠</string>
    <string name="drawer_credit_card_point">信用卡积分</string>
    <string name="drawer_information_article">飞客知道</string>
    <string name="drawer_travel_experience">旅行体验</string>
    <string name="drawer_hotel_reservation">酒店预订</string>
    <string name="drawer_fly_entry">飞客入门</string>
    <string name="drawer_hotel_report">酒店Report</string>
    <string name="drawer_flight_report">飞行Report</string>
    <string name="drawer_grader_def">游客</string>
    <string name="home_tab_me">我的</string>
    <string name="home_tab_chat">聊天</string>
    <string name="forum_ac_title">社区</string>
    <string name="forum_ac_complete">完成</string>
    <string name="community_ac_plate">社区版块</string>
    <string name="community_ac_my_topic">我的帖子</string>
    <string name="community_ac_record">最近浏览</string>
    <string name="community_ac_attention_plate">关注版块</string>
    <string name="community_ac_all_plate">全部版块</string>
    <string name="community_ac_new_post">最新发帖</string>
    <string name="community_ac_new_hot">最新热门</string>
    <string name="community_ac_new_digest">最新精华</string>
    <string name="add_task_ac_title">添加任务</string>
    <string name="add_task_ac_cancel">取消</string>
    <string name="add_task_ac_ok">完成</string>
    <string name="add_task_ac_name">任务名称</string>
    <string name="add_task_ac_name_hint">请选择</string>
    <string name="add_task_ac_card_number">卡号后4位</string>
    <string name="add_task_ac_card_number_hint">选填</string>
    <string name="add_task_ac_add">添加</string>
    <string name="add_task_ac_manually_add_tv">未找到任务，</string>
    <string name="add_task_ac_manually_add">手动添加</string>
    <string name="manually_add_ac_base_info">基本信息</string>
    <string name="manually_add_ac_brank">所属银行</string>
    <string name="manually_add_ac_brank_hint">请选择</string>
    <string name="manually_add_ac_task_name">任务名称</string>
    <string name="manually_add_ac_task_name_hint">请填写任务名称</string>
    <string name="manually_add_ac_task_drscrible">任务描述</string>
    <string name="manually_add_ac_task_drscrible_hint">请填写任务描述</string>
    <string name="manually_add_ac_card_number">卡号后4位</string>
    <string name="manually_add_ac_task_period">任务周期(支持多条)</string>
    <string name="manually_add_ac_task_period_edit">编辑</string>
    <string name="manually_add_ac_first_period">第一期</string>
    <string name="manually_add_ac_first_period_hint">选择起止时间</string>
    <string name="manually_add_ac_expense">消费笔数</string>
    <string name="manually_add_ac_hint">选填</string>
    <string name="manually_add_ac_money">每笔金额</string>
    <string name="manually_add_ac_total_money">总金额</string>
    <string name="manually_add_ac_add_period">+\t新增周期</string>
    <string name="task_search_ac_brank">选择银行</string>
    <string name="task_search_ac_card_channel">卡组织</string>
    <string name="select_brank_ac_title">选择银行</string>
    <string name="select_date_ac_title">选择起止日期</string>
    <string name="message_center_ac_title">消息中心</string>
    <string name="message_center_ac_reply_my">回复我的</string>
    <string name="message_center_ac_send_flowers">送我鲜花</string>
    <string name="message_center_ac_add_friends">加我好友</string>
    <string name="message_center_ac_post_achievement">帖子成就</string>
    <string name="message_center_ac_other_message">系统提醒</string>
    <string name="message_center_ac_flyer_activies">活动精选</string>
    <string name="message_center_ac_flyer_recommend">好文推荐</string>
    <string name="push_notification_ac_title">推送通知</string>
    <string name="push_notification_ac_message_notification">接收新消息通知</string>
    <string name="push_notification_ac_reply_mine">回复我的</string>
    <string name="push_notification_ac_private_letter">私信</string>
    <string name="push_notification_ac_add_friends">加我好友</string>
    <string name="push_notification_ac_send_flowers">送我鲜花</string>
    <string name="push_notification_ac_receive_message_times">接收消息时段</string>
    <string name="push_notification_ac_receive_message_times_hint">8:00-22:00</string>
    <string name="reply_mine_ac_title">回复我的</string>
    <string name="other_message_ac_title">系統提醒</string>
    <string name="send_flowers_ac_title">送我鲜花</string>
    <string name="add_my_friends_ac_title">加我好友</string>
    <string name="flyer_activies_ac_title">飞客活动</string>
    <string name="include_data_load_null">暂无消息</string>
    <string name="pop_my_attention_topic_type">帖子分类</string>
    <string name="pop_my_attention_topic_sort">帖子排序</string>
    <string name="include_dressing_name">筛选</string>
    <string name="include_dressing_tab_one">分类</string>
    <string name="include_dressing_tab_two">标签</string>
    <string name="publish_post_title_name">发布主帖</string>
    <string name="publish_post_edit_hint_title">请输入标题(80)</string>
    <string name="publish_post_edit_hint_body">帖子正文</string>
    <string name="reply_title_comment">评论回复</string>
    <string name="reply_title_quote">引用回复</string>
    <string name="reply_title_issue">发布帖子</string>
    <string name="reply_title_feedback">意见反馈</string>
    <string name="reply_edit_hige">回复内容</string>
    <string name="developing">该功能模块正在开发中,敬请期待！</string>
    <string name="reply_title_post">文章回复</string>
    <string name="title_name_remind">我的消息</string>
    <string name="title_name_mythread">我的帖子</string>
    <string name="title_name_hotel_reservation">酒店预订</string>
    <string name="title_name_preferential">优惠</string>
    <string name="title_name_travel_experience">酒店Report</string>
    <string name="title_name_information_article">飞客知道</string>
    <string name="title_name_postdetails">帖子详情</string>
    <string name="title_name_creditcardresults">查询结果</string>
    <string name="title_name_hotel_report">酒店Report</string>
    <string name="title_name_flight_report">飞行Report</string>
    <string name="title_name_userinfo">个人资料</string>
    <string name="title_name_search">搜索</string>
    <string name="title_name_reminddetails">详情</string>
    <string name="title_name_private_letter">私信</string>
    <string name="title_name_term_service">服务条款</string>
    <string name="title_name_my_collect">我的收藏</string>
    <string name="title_name_new_hand">入门知识</string>
    <string name="title_name_setting">设置</string>
    <string name="title_name_about_us">关于我们</string>
    <string name="title_name_forum_type">分类选择</string>
    <string name="title_name_creditcard_point">信用卡积分</string>
    <string name="creditcard_point_bank_name">银行名称</string>
    <string name="creditcard_point_back_point">返积分类型</string>
    <string name="creditcard_point_business_type">商户类型(MCC码)</string>
    <string name="creditcard_shuoming_text">以上数据由飞客茶馆会员提供,积分最终以银行记录为准</string>
    <string name="replypost_not_message_pointout">请输入评论内容</string>
    <string name="login_reminder">请您先登录</string>
    <string name="userinfo_ac_title">个人资料</string>
    <string name="userinfo_head">头像</string>
    <string name="userinfo_nick_name">昵称</string>
    <string name="userinfo_name">用户名</string>
    <string name="userinfo_mailbox">常用邮箱</string>
    <string name="userinfo_sex">性别</string>
    <string name="userinfo_grade">论坛等级</string>
    <string name="userinfo_authority">阅读权限</string>
    <string name="userinfo_point">论坛积分</string>
    <string name="userinfo_fermi">飞米</string>
    <string name="userinfo_flwer">鲜花数</string>
    <string name="mythread_mythread">我的主帖</string>
    <string name="mythread_repley">我的回复</string>
    <string name="def_all">全部</string>
    <string name="login_register_prompt">还没有帐号?点击这里注册</string>
    <string name="login_login_prompt">已经有账号?点击这里登录</string>
    <string name="login_edit_username">用户名</string>
    <string name="login_edit_passwords">帐户密码</string>
    <string name="login_term_of_service">飞客茶馆旅行网  服务条款</string>
    <string name="login">登录</string>
    <string name="people_nearby">附近</string>
    <string name="cancel">取消</string>
    <string name="immediately_login">立即登录</string>
    <string name="newest">最新</string>
    <string name="remen">热门</string>
</resources>