<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/fragment_zhibo_zuixin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/app_bg_title"
        android:background="@drawable/zhibo_btn_actionbar_right"
        android:text="@string/newest" />

    <TextView
        android:id="@+id/fragment_zhibo_remen_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/discount_btn_actionbar_left"
        android:text="@string/remen" />

    <TextView
        android:id="@+id/fragment_zhibo_near_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/app_bg_title"
        android:background="@drawable/zhibo_btn_actionbar_right"
        android:text="@string/people_nearby"/>

</LinearLayout>